修改 nav sticky-top 跟 modal-backdrop 的衝突 目前是將 modal-backdrop 的 z-index 改成 1010 使 sticky-top 的 z-index 不被蓋住來達成 bug 消失 但本意應該是要 nav 也被蓋住 因此要再行討論

--- a/style/style.css
+++ b/style/style.css
@@ -69,7 +69,14 @@ body {
 }
 
 .navbar {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 1020;
   background: #333;
+  -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5), inset 0 -1px 0 rgba(0, 0, 0, 0.5);
+          box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5), inset 0 -1px 0 rgba(0, 0, 0, 0.5);
 }
 
 .navbar .navbar-brand {
@@ -105,6 +112,10 @@ body {
   color: rgba(255, 255, 255, 0.75);
   background-color: #f19483;
   border-color: rgba(255, 255, 255, 0.75);
+}
+
+.modal-backdrop {
+  z-index: 1010;
 }
 
 .modal-content {
